Fixed bug when clicking on the same card twice

--- a/memory_game/css/main.css
+++ b/memory_game/css/main.css
@@ -120,10 +120,15 @@ footer {
 #reset-button {
     color: #F15B31;
     display: inline-block;
+    cursor: pointer;
 }
 
 #reset-button:hover {
     color: #F15B31;
     font-weight: 800;
     display: inline-block;
+}
+
+img {
+    cursor: pointer ;
 }
